--- a/app/src/main/res/layout/activity_join_team_intro.xml
+++ b/app/src/main/res/layout/activity_join_team_intro.xml
@@ -4,90 +4,90 @@
     android:layout_height="match_parent"
     android:fillViewport="true">
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="@dimen/dp_15">
+        android:background="@color/color_efeff4">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="60dp"
-                android:layout_height="wrap_content"
-                android:textColor="@color/color_333333"
-                android:textSize="@dimen/sp_14"
-                android:text="手机号"/>
-
-            <EditText
-                android:id="@+id/et_phone"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@null"
-                android:textSize="@dimen/sp_14"
-                android:maxLength="11"
-                android:layout_marginLeft="@dimen/dp_15"
-                android:hint="请输入手机号"
-                android:textColorHint="@color/color_999999"
-                android:textColor="@color/color_666666"/>
-        </LinearLayout>
-
-        <View
-            style="@style/horizontal_line"
-            android:layout_marginTop="@dimen/dp_15"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_15">
-            <TextView
-                android:layout_width="60dp"
-                android:layout_height="wrap_content"
-                android:textColor="@color/color_333333"
-                android:textSize="@dimen/sp_14"
-                android:text="QQ号"/>
+            android:background="@color/white"
+            android:orientation="vertical"
+            android:padding="@dimen/dp_15">
 
-            <EditText
-                android:id="@+id/et_qq"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="60dp"
+                    android:layout_height="wrap_content"
+                    android:text="手机号"
+                    android:textColor="@color/color_333333"
+                    android:textSize="@dimen/sp_14" />
+
+                <EditText
+                    android:id="@+id/et_phone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dp_15"
+                    android:background="@null"
+                    android:hint="请输入手机号"
+                    android:maxLength="11"
+                    android:textColor="@color/color_333333"
+                    android:textColorHint="@color/color_999999"
+                    android:textSize="@dimen/sp_14" />
+            </LinearLayout>
+
+            <View style="@style/horizontal_line" />
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_15">
+
+                <TextView
+                    android:layout_width="60dp"
+                    android:layout_height="wrap_content"
+                    android:text="QQ号"
+                    android:textColor="@color/color_333333"
+                    android:textSize="@dimen/sp_14" />
+
+                <EditText
+                    android:id="@+id/et_qq"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dp_15"
+                    android:background="@null"
+                    android:hint="请输入QQ号"
+                    android:inputType="number"
+                    android:textColor="@color/color_333333"
+                    android:textColorHint="@color/color_999999"
+                    android:textSize="@dimen/sp_14" />
+            </LinearLayout>
+
+
+            <View
+                style="@style/horizontal_line"
+                android:layout_marginTop="@dimen/dp_15" />
+
+
+
+            <EditText
+                android:id="@+id/et_intro"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_160"
+                android:layout_marginTop="@dimen/dp_15"
                 android:background="@null"
-                android:textSize="@dimen/sp_14"
-                android:inputType="number"
-                android:layout_marginLeft="@dimen/dp_15"
-                android:hint="请输入QQ号"
-                android:textColorHint="@color/color_999999"
-                android:textColor="@color/color_666666"/>
+                android:gravity="top|left"
+                android:hint="个人特长"
+                android:textColor="@color/color_333333"
+                android:textColorHint="@color/color_666666"
+                android:textCursorDrawable="@drawable/shape_color_cursor"
+                android:textSize="@dimen/sp_14" />
+
         </LinearLayout>
-
-
-        <View
-            style="@style/horizontal_line"
-            android:layout_marginTop="@dimen/dp_15"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/color_333333"
-            android:layout_marginTop="@dimen/dp_15"
-            android:textSize="@dimen/sp_14"
-            android:text="个人特长"/>
-
-        <EditText
-            android:id="@+id/et_intro"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_160"
-            android:gravity="top|left"
-            android:hint="@string/please_input_content"
-            android:layout_marginTop="@dimen/dp_6"
-            android:background="@drawable/shape_bg_rect_border"
-            android:padding="@dimen/dp_10"
-            android:textColor="@color/color_333333"
-            android:textColorHint="@color/color_cccccc"
-            android:textCursorDrawable="@drawable/shape_color_cursor"
-            android:textSize="@dimen/dp_14" />
-
-    </LinearLayout>
-
+    </FrameLayout>
 </ScrollView>
