--- a/app/src/main/res/layout/activity_join_team_intro.xml
+++ b/app/src/main/res/layout/activity_join_team_intro.xml
@@ -41,7 +41,8 @@
                     android:textSize="@dimen/sp_14" />
             </LinearLayout>
 
-            <View style="@style/horizontal_line" />
+            <View style="@style/horizontal_line"
+                android:layout_marginTop="@dimen/dp_15"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
