--- a/app/src/main/res/layout/activity_profile_info.xml
+++ b/app/src/main/res/layout/activity_profile_info.xml
@@ -83,6 +83,8 @@
                     android:visibility="visible"
                     android:layout_marginRight="@dimen/dp_15"
                     android:scaleType="centerInside"
+                    android:layout_marginTop="@dimen/dp_15"
+                    android:layout_marginBottom="@dimen/dp_15"
                     android:src="@drawable/icon_more" />
             </LinearLayout>
 
